# webdar

./: AUTHORS  INSTALL  Makefile  NEWS  README  TODO  my_config.h
.github/: FUNDING.yml
RFC/: HTTP_1.0.txt  HTTP_1.1.txt  HTTP_cookies.txt  URL.txt
data/: darrc
doc/: Doxyfile  Makefile  Makefile.am  WHY_WEBDAR  architecture.txt  portable_cp  selfsigned_certificate.txt  webdar.txt
doc/Tutorial/: index.html
docs/: index.html  style.css
docs/Tutorial/: index.html
man/: webdar.1
misc/: Makefile.am  init  webdar_static_builder_with_musl_voidlinux.bash
po/: generate_POTFILES.in
src/: CLASS_TEMPLATE.cpp  CLASS_TEMPLATE.hpp  Makefile  Makefile.am  TEMPLATE.CPP  TEMPLATE.CPP.TMPLT  TEMPLATE.HPP  TEMPLATE.HPP.TMPLT  actor.cpp  actor.hpp  answer.cpp  answer.hpp  archive_compare.cpp  archive_compare.hpp  archive_create.cpp  archive_create.hpp  archive_init_list.cpp  archive_init_list.hpp  archive_isolate.cpp  archive_isolate.hpp  archive_merge.cpp  archive_merge.hpp  archive_repair.cpp  archive_repair.hpp  archive_restore.cpp  archive_restore.hpp  archive_test.cpp  archive_test.hpp  arriere_boutique.hpp  authentication.hpp  base64.cpp  base64.hpp  bibli_referable.hpp  bibli_renvoi.cpp  bibli_renvoi.hpp  bibliotheque.cpp  bibliotheque.hpp  bibliotheque_subconfig.cpp  bibliotheque_subconfig.hpp  body_builder.cpp  (+298 more)
src/testing/: Makefile  pthread_test.cpp  test_events.cpp  test_thread.cpp
src/webdar/: Makefile  TEMPLATE.CPP  TEMPLATE.HPP  aiguille.cpp  aiguille.hpp  answer.cpp  answer.hpp  archive_compare.cpp  archive_compare.hpp  archive_create.cpp  archive_create.hpp  archive_init_list.cpp  archive_init_list.hpp  archive_isolate.cpp  archive_isolate.hpp  archive_merge.cpp  archive_merge.hpp  archive_read.cpp  archive_read.hpp  archive_restore.cpp  archive_restore.hpp  archive_test.cpp  archive_test.hpp  authentication.hpp  base64.cpp  base64.hpp  body_builder.cpp  body_builder.hpp  central_report.cpp  central_report.hpp  (+164 more)
